main/default/objects/Limit_Deductible_Tmp__c/Limit_Deductible_Tmp__c.object-meta.xml
<CustomObject>
    <label>Limit Deductible Tmp</label>
    <nameField>
        <label>Limit Deductible Tmp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Limit Deductible Tmps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>