main/default/objects/Limit_Deductible_Tmp__c/fields/KeyTmp__c.field-meta.xml
<CustomField>
    <fullName>KeyTmp__c</fullName>
    <label>KeyTmp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>