main/default/objects/Limit_Deductible_Tmp__c/fields/ValueDecimal__c.field-meta.xml
<CustomField>
    <fullName>ValueDecimal__c</fullName>
    <label>ValueDecimal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>