main/default/objects/Limit_Deductible_Tmp__c/fields/ValueTmp__c.field-meta.xml
<CustomField>
    <fullName>ValueTmp__c</fullName>
    <label>ValueTmp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>